# cachegate

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  TODO.md  config.example.yaml  docker-compose.prod.yml  docker-compose.yml
.cargo/: config.toml
src/: TODO.md  auth.rs  config.rs  handler.rs  inflight.rs  main.rs  metrics.rs
src/cache/: foyer.rs  memory.rs  mod.rs
src/store/: azure.rs  mod.rs
tests/: integration.rs
