[package]
name = "cachegate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "^0.7"
base64 = "0.22"
bytes = "1"
ed25519-dalek = "2"
futures = "0.3"
infer = "0.19"
lru = "^0.16"
mime_guess = "2"
object_store = { version = "0.13", features = ["aws", "azure"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "^2"
time = { version = "0.3", features = ["std"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
reqwest = { version = "^0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
tempfile = "3"
