[package]
name = "cachegate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "^0.8"
base64 = "0.22"
bytes = { version = "1", features = ["serde"] }
bytesize = "1"
bytesize-serde = "0.1"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
envious = "0.2.2"
futures = "0.3"
infer = "0.19"
foyer = { version = "0.22.3", features = ["serde"] }
lru = "^0.16"
mime_guess = "2"
object_store = { version = "0.13", features = ["aws", "azure"] }
mixtrics = { version = "0.2.0", features = ["prometheus_0_13"] }
prometheus_0_13 = { package = "prometheus", version = "0.13" }
rand = "0.8"
sentry = "^0.46"
sentry-tower = "^0.46"
sentry-tracing = "^0.46.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "^2"
time = { version = "0.3", features = ["std"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
reqwest = { version = "^0.13", default-features = false, features = [
  "json",
  "rustls",
  "rustls-native-certs",
] }
tempfile = "3"
